Add docker config

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,25 @@
 APP_DB_NAME=BondageClubDatabase
 APP_DB_USER=admin
 APP_DB_PASS=password
-APP_DB_HOST=127.0.0.1
+APP_DB_HOST=db
 APP_DB_PORT=27017
-APP_DB_URI=mongodb://${APP_DB_HOST}:${APP_DB_PORT}
+APP_DB_URI=mongodb://${APP_DB_USER}:${APP_DB_PASS}@${APP_DB_HOST}:${APP_DB_PORT}
 APP_DB_COLLECTION=Accounts
 
-APP_SERVER_ADDR=127.0.0.1:3000
+APP_SERVER_ADDR=0.0.0.0:4288
+
+ENABLE_WEBADMIN=true
+
+# MongoDB settings
+MONGO_INITDB_ROOT_USERNAME=${APP_DB_USER}
+MONGO_INITDB_ROOT_PASSWORD=${APP_DB_PASS}
+MONGO_INITDB_DATABASE=${APP_DB_NAME}
+
+# MongoExpress settings
+ME_CONFIG_MONGODB_SERVER=${APP_DB_HOST}
+ME_CONFIG_MONGODB_PORT=${APP_DB_PORT}
+ME_CONFIG_MONGODB_ENABLE_ADMIN=${ENABLE_WEBADMIN}
+ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_INITDB_ROOT_USERNAME}
+ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+ME_CONFIG_BASICAUTH_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+ME_CONFIG_BASICAUTH_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
