Implement account creation

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-
 APP_DB_NAME=BondageClubDatabase
 APP_DB_USER=admin
 APP_DB_PASS=password
@@ -6,6 +5,8 @@ APP_DB_HOST=db
 APP_DB_PORT=27017
 APP_DB_URI=mongodb://${APP_DB_USER}:${APP_DB_PASS}@${APP_DB_HOST}:${APP_DB_PORT}
 APP_DB_COLLECTION=Accounts
+APP_MAX_IP_ACCOUNT_PER_DAY=10
+APP_MAX_IP_ACCOUNT_PER_HOUR=4
 
 APP_SERVER_ADDR=0.0.0.0:4288
 
