--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ futures-util = "0.3.31"
 mongodb = { version = "2.8", features = ["tokio-runtime"] }
 tokio = { version = "1", features = ["full"] }
 tracing-subscriber = "0.3.19"
+serde_json = "1.0.140"
+regex = "1.11.1"
+bcrypt = "0.17.0"
