--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,18 @@
+[*]
+insert_final_newline = true
+
 [*.rs]
 trim_trailing_whitespace = true
-insert_final_newline = true
 indent_style = space
 indent_size = 4
 
 [*.toml]
 trim_trailing_whitespace = true
-insert_final_newline = true
+
+[Dockerfile,docker-compose.yml]
+indent_style = space
+indent_size = 4
+
+[justfile]
+indent_style = space
+indent_size = 2
