--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ bcrypt = "0.17.0"
 ordermap = "0.5.8"
 async-recursion = "1.1.1"
 just = "1.42.2"
+utility-types = "0.0.4"
+base64 = "0.22.1"
+rand = "0.9.1"
 
 [dev-dependencies]
 just = "1.42.2"
