--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ tracing-subscriber = "0.3.19"
 serde_json = "1.0.140"
 regex = "1.11.1"
 bcrypt = "0.17.0"
+ordermap = "0.5.8"
+async-recursion = "1.1.1"
+just = "1.42.2"
 
 [dev-dependencies]
 just = "1.42.2"
