--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ bcrypt = "0.17.0"
 ordermap = "0.5.8"
 async-recursion = "1.1.1"
 just = "1.42.2"
+utility-types = "0.0.4"
 
 [dev-dependencies]
 just = "1.42.2"
